import "DocumentId.proto";

package Diadoc.Api.Proto;

message CustomPrintFormDetectionResult
{
    repeated CustomPrintFormDetectionItemResult Items = 1;
}

message CustomPrintFormDetectionItemResult
{
    required DocumentId DocumentId = 1;
    required bool HasCustomPrintForm = 2;
}

message CustomPrintFormDetectionRequest
{
    repeated DocumentId DocumentIds = 1;
}